Fixed mobile spacing on hero/HIW/WWWU

--- a/css/style.css
+++ b/css/style.css
@@ -134,9 +134,15 @@ header {
     z-index: 5;
     top: 0px;
     width: 100vw;
-    box-shadow: 0px -4px 3px 1px rgba(133,133,133,0.35);
-    background-color: rgb(26, 26, 26);
+    transition: 0.5s;
+    
 
+}
+
+.headerSolidBackground {
+    box-shadow: 0px -4px 3px 1px rgba(133,133,133,0.35);
+    background-color: rgba(26, 26, 26, 0.832);
+    transition: 0.5s;
 }
 
 /* Nav styling */
@@ -267,11 +273,12 @@ li a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-bottom: solid 5px #FFC982;
 }
 
 @media (max-width: 1020px) {
     .hero {
-        background-image: url('/images/hero-image-mobile.png');
+        background-image: url('/images/Hero-Mobile.gif');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -294,7 +301,13 @@ li a:hover {
     gap: 30px;
     position: relative;
     width: 100vw;
-    min-height: 739px;
+    min-height: 700px;
+}
+
+@media (max-width: 600px) {
+    .hero-content-wrapper {
+        min-height: 600px;
+    }
 }
 
 /* Hero subtext styling */
@@ -319,6 +332,14 @@ li a:hover {
     display: flex;
     justify-content: space-between;
     padding: 0 20px 15px 20px;
+}
+
+@media (max-width: 1020px) {
+    .bottom-text-wrapper {
+        padding: 0 20px 3px 20px;
+        justify-content: center;
+        font-size: 0.85rem;
+    } 
 }
 
 /* Hero bottom text right styling (with image) */
@@ -549,11 +570,22 @@ li a:hover {
 
 }
 
+
+
+@media (max-width: 850px) {
+    .how-it-works .container {
+        gap: 50px;
+    
+    }
+    
+}
+
 /* How it works card wrapper styling */
 .how-it-works-card-wrapper {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 /* How it works card styling */
@@ -564,6 +596,7 @@ li a:hover {
     width: 30%;
     padding: 20px;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     text-align: center;
     gap: 20px;
@@ -609,6 +642,17 @@ li a:hover {
         width: 100%;
     }
 }
+
+
+
+@media (max-width: 500px) {
+    .how-it-works-card-wrapper {
+        flex-direction: column;
+        width: 95%;
+        gap: 80px;
+    }
+}
+
 
 
 /******************************************
@@ -1114,6 +1158,17 @@ li a:hover {
     }
 }
 
+@media (max-width: 500px) {
+    .why-work-with-us-card-wrapper {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr !important;
+        gap: 50px;
+        align-items: center;
+        justify-content: center;
+        width: 97%;
+    }
+}
+
 /* Why work with us card styling */
 .why-work-with-us-card {
     display: flex;
@@ -1527,20 +1582,17 @@ footer a:hover {
 
 /* Hero button styling */
 .hero-content-wrapper .btn {
-    margin-top: 20px;
     background-color: #ffc9823a;
     font-size: 1.5em;
     transition: 0.5s;
 }
 
 .hero-content-wrapper .btn:hover {
-    margin-top: 20px;
     display: inline-block;
     border: 2px solid #FFC982;
     background-color: #FFC982;
     color: #444444;
     border-radius: 10px;
-    font-size: 1.5rem;
     transition: 0.5s;
 }
 
